--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
       <div id="home" class="flex-center flex-column">
         <h1>Cecyte Quiz</h1>
-        <a class="btn" href="/game.html">Jugar</a>
-        <a class="btn" href="/highscores.html">puntajes mas altos</a>
+        <a class="btn" href="game.html">Jugar</a>
+        <a class="btn" href="highscores.html">puntajes mas altos</a>
       </div>
     </div>
   </body>
