--- a/game.html
+++ b/game.html
@@ -49,6 +49,6 @@
         </div>
       </div>
     </div>
-    <script src="game.js"></script>
+    <script src="https://nobillisgemma.github.io/preguntas2.github.io/game.js"></script>
   </body>
 </html>
