--- a/end.html
+++ b/end.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Congrats!</title>
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="https://nobillisgemma.github.io/preguntas2.github.io/app.css" />
   </head>
   <body>
     <div class="container">
@@ -28,10 +28,10 @@
             Save
           </button>
         </form>
-        <a class="btn" href="/game.html">Play Again</a>
-        <a class="btn" href="/">Go Home</a>
+        <a class="btn" href="https://nobillisgemma.github.io/preguntas2.github.io/game.html">Play Again</a>
+        <a class="btn" href="https://nobillisgemma.github.io/preguntas2.github.io/index.html">Go Home</a>
       </div>
     </div>
-    <script src="end.js"></script>
+    <script src="https://nobillisgemma.github.io/preguntas2.github.io/end.js"></script>
   </body>
 </html>
