--- a/highscores.html
+++ b/highscores.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Puntajes altos</title>
     <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="highscores.css" />
+    <link rel="stylesheet" href="https://nobillisgemma.github.io/preguntas2.github.io/highscores.css" />
   </head>
   <body>
     <div class="container">
@@ -16,6 +16,6 @@
         <a class="btn" href="/">Ir al inicio</a>
       </div>
     </div>
-    <script src="highscores.js"></script>
+    <script src="https://nobillisgemma.github.io/preguntas2.github.io/highscores.js"></script>
   </body>
 </html>
