--- a/highscores.html
+++ b/highscores.html
@@ -13,7 +13,7 @@
       <div id="highScores" class="flex-center flex-column">
         <h1 id="finalScore">Puntajes altos</h1>
         <ul id="highScoresList"></ul>
-        <a class="btn" href="/">Ir al inicio</a>
+        <a class="btn" href="https://nobillisgemma.github.io/preguntas2.github.io/index.html">Ir al inicio</a>
       </div>
     </div>
     <script src="https://nobillisgemma.github.io/preguntas2.github.io/highscores.js"></script>
